[package]
name = "security-token"
version = "1.0.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "security_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["no-log-ix-name"]

[dependencies]
anchor-lang = "0.25.0"
solana-program = "1.10.29"
net-authority = { version = "0.1.0", git = "https://github.com/atellix/net-authority", branch = "token-auth", features = ["cpi"] }

